--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,174 +1,8 @@
 <resources>
-    <style name="MyThemeHoloLightOrangeDarkActionBar" parent="Theme.Sherlock.Light">
-        <!--Include block: HoloLight-->
-        <!--Include block: BaseLight-->
-        <!--Include block: Base-->
-        <item name="vpiCirclePageIndicatorStyle">@style/Widget.CirclePageIndicator</item>
+    <style name="Horoscope_v5" parent="@style/Holo.Theme.Light.DarkActionBar">
+   		<item name="vpiCirclePageIndicatorStyle">@style/Widget.CirclePageIndicator</item>
         <item name="vpiTitlePageIndicatorStyle">@style/Widget.TitlePageIndicator</item>
         <item name="vpiTabPageIndicatorStyle">@style/Widget.TabPageIndicator</item>
         <item name="vpiTabTextStyle">@style/Widget.TabPageIndicator.Text</item>
-        <!--to top to indicator-->
-        <item name="android:dropDownSelector">@drawable/list_selector_holo_light</item>
-        <item name="android:editTextStyle">@style/EditTextAppTheme</item>
-    <item name="android:autoCompleteTextViewStyle">@style/AutoCompleteTextViewAppTheme</item>
-    <item name="android:checkboxStyle">@style/CheckBoxAppTheme</item>
-    <item name="android:radioButtonStyle">@style/RadioButtonAppTheme</item>
-    <item name="android:buttonStyle">@style/ButtonAppTheme</item>
-    <item name="android:imageButtonStyle">@style/ImageButtonAppTheme</item>
-    <item name="android:spinnerStyle">@style/SpinnerAppTheme</item>
-    <item name="android:dropDownSpinnerStyle">@style/SpinnerAppTheme.DropDown</item>
-    <item name="android:spinnerDropDownItemStyle">@style/SpinnerDropDownItemAppTheme</item>
-    <item name="android:progressBarStyleHorizontal">@style/ProgressBarAppTheme</item>
-    <item name="android:seekBarStyle">@style/SeekBarAppTheme</item>
-    <item name="android:ratingBarStyle">@style/RatingBarAppTheme</item>
-    <item name="android:ratingBarStyleIndicator">@style/RatingBarBigAppTheme</item>
-    <item name="android:ratingBarStyleSmall">@style/RatingBarSmallAppTheme</item>
-    <item name="android:buttonStyleToggle">@style/ToggleAppTheme</item>
-    <item name="android:listViewStyle">@style/ListViewAppTheme</item>
-    <item name="android:listViewWhiteStyle">@style/ListViewAppTheme.White</item>
-    <item name="android:spinnerItemStyle">@style/SpinnerItemAppTheme</item>
-        <item name="activatedBackgroundIndicator">@drawable/activated_background_holo</item>
-        <item name="android:activatedBackgroundIndicator">@drawable/list_selector_holo_dark</item>
-        <item name="android:dialogTheme">?dialogTheme</item>
-        <item name="android:dividerHorizontal">?dividerHorizontal</item>
-        <item name="android:dividerVertical">?dividerVertical</item>
-        <item name="buttonBarButtonStyle">?borderlessButtonStyle</item>
-        <item name="buttonBarStyle">@style/Holo.ButtonBar</item>
-        <item name="checkBoxPreferenceStyle">@style/Holo.PreferenceCheckBox</item>
-        <item name="datePickerStyle">@style/Holo.DatePicker</item>
-        <item name="dialogPreferenceStyle">@style/Holo.PreferenceDialog</item>
-        <item name="dividerHorizontal">?android:listDivider</item>
-        <item name="dividerVertical">?android:listDivider</item>
-        <item name="dropdownListPreferredItemHeight">?listPreferredItemHeight</item>
-        <item name="editTextPreferenceStyle">@style/Holo.PreferenceDialog.EditTextPreference</item>
-        <item name="fastScrollOverlayPosition">atThumb</item>
-        <item name="fastScrollTextColor">@color/primary_text_holo_dark</item>
-        <item name="fastScrollThumbDrawable">@drawable/fastscroll_thumb_holo</item>
-        <item name="holoTheme">true</item>
-        <item name="listPreferredItemHeight">64dip</item>
-        <item name="listPreferredItemHeightLarge">80dp</item>
-        <item name="listPreferredItemHeightSmall">48dp</item>
-        <item name="listPreferredItemPaddingLeft">8dp</item>
-        <item name="listPreferredItemPaddingRight">8dp</item>
-        <item name="numberPickerInputTextStyle">@style/Holo.EditText.NumberPickerInputText</item>
-        <item name="numberPickerPreferenceStyle">@style/Holo.PreferenceDialog.NumberPickerPreference</item>
-        <item name="numberPickerStyle">@style/Holo.NumberPicker</item>
-        <item name="panelMenuListWidth">250dp</item>
-        <item name="preferenceCategoryStyle">@style/Holo.PreferenceCategory</item>
-        <item name="preferenceFragmentStyle">@style/Holo.PreferenceFragment</item>
-        <item name="preferenceFrameLayoutStyle">@style/Holo.PreferenceFrameLayout</item>
-        <item name="preferenceInformationStyle">@style/Holo.PreferenceInformation</item>
-        <item name="preferenceLayoutChild">@layout/preference_child_holo</item>
-        <item name="preferencePanelStyle">@style/Holo.PreferencePanel</item>
-        <item name="preferenceScreenStyle">@style/Holo.PreferenceScreen</item>
-        <item name="preferenceStyle">@style/Holo.Preference</item>
-        <item name="ringtonePreferenceStyle">@style/Holo.PreferenceRingtone</item>
-        <item name="seekBarDialogPreferenceStyle">@style/Holo.PreferenceDialog.SeekBarDialogPreference</item>
-        <item name="seekBarPreferenceStyle">@style/Holo.PreferenceSeekBar</item>
-        <item name="switchPreferenceStyle">@style/Holo.PreferenceSwitch</item>
-        <item name="textAppearanceListItem">?android:textAppearanceLarge</item>
-        <item name="textAppearanceListItemSmall">?android:attr/textAppearanceMedium</item>
-        <item name="timePickerStyle">@style/Holo.TimePicker</item>
-        <item name="yesNoPreferenceStyle">@style/Holo.PreferenceDialog.YesNoPreference</item>
-        <!--End of block Base-->
-        <item name="alertDialogStyle">@style/Holo.AlertDialog.Light</item>
-        <item name="alertDialogTheme">@style/Holo.Theme.Dialog.Alert.Light</item>
-        <item name="android:popupWindowStyle">@style/Holo.PopupWindow.Light</item>
-        <item name="android:windowBackground">@drawable/background_holo_light</item>
-        <item name="autoCompleteTextViewStyle">@style/Holo.AutoCompleteTextView.Light</item>
-        <item name="borderlessButtonStyle">@style/Holo.Button.Borderless.Light</item>
-        <item name="calendarViewStyle">@style/Holo.CalendarView.Light</item>
-        <item name="dialogTheme">@style/Holo.Theme.Dialog.Light</item>
-        <item name="dropDownListViewStyle">@style/Holo.ListView.DropDown.Light</item>
-        <item name="android:dropDownListViewStyle">@style/Holo.ListView.DropDown.Light</item>
-        <item name="fastScrollPreviewBackgroundLeft">@drawable/fastscroll_label_left_holo_light</item>
-        <item name="fastScrollPreviewBackgroundRight">@drawable/fastscroll_label_right_holo_light</item>
-        <item name="fastScrollTrackDrawable">@drawable/fastscroll_track_holo_light</item>
-        <item name="listDividerAlertDialog">@drawable/list_divider_holo_light</item>
-        <item name="listPopupWindowStyle">@style/Holo.ListPopupWindow.Light</item>
-        <item name="modalBackgroundWrapper">@drawable/modal_background_holo_light</item>
-        <item name="segmentedButtonStyle">@style/Holo.SegmentedButton.Light</item>
-        <item name="selectableItemBackground">@drawable/item_background_holo_dark</item>
-         <item name="android:selectableItemBackground">@drawable/item_background_holo_dark</item>
-         <item name="android:actionBarItemBackground">?attr/selectableItemBackground</item>
-        <item name="spinnerDropDownItemStyle">@style/Holo.TextView.SpinnerItem.DropDown.Light</item>
-        <item name="spinnerItemStyle">@style/Holo.TextView.SpinnerItem.Light</item>
-        <item name="spinnerStyle">@style/Holo.Spinner.Light</item>
-        <item name="switchStyle">@style/Holo.Switch.Light</item>
-        <item name="switchStyleOld">@style/Holo.Switch.Light.Old</item>
-        <item name="textAppearanceLargePopupMenu">@style/Holo.TextAppearance.PopupMenu.Light.Large</item>
-        <item name="textAppearanceSmallPopupMenu">@style/Holo.TextAppearance.PopupMenu.Light.Small</item>
-        <item name="textColorAlertDialogListItem">@color/primary_text_holo_light</item>
-        <!--End of block BaseLight-->
-        <!--Include block: Holo-->
-        <item name="android:divider">?android:listDivider</item>
-        <item name="android:dropDownItemStyle">@style/Holo.DropDownItem</item>
-        <item name="android:gridViewStyle">@style/Holo.GridView</item>
-        <item name="android:progressBarStyle">@style/Holo.ProgressBar</item>
-        <item name="android:progressBarStyleLarge">@style/Holo.ProgressBar.Large</item>
-        <item name="android:progressBarStyleSmall">@style/Holo.ProgressBar.Small</item>
-        <item name="android:scrollbarDefaultDelayBeforeFade">300</item>
-        <item name="android:scrollbarFadeDuration">250</item>
-        <item name="android:scrollbarSize">10dp</item>
-        <item name="android:scrollbarTrackHorizontal">@null</item>
-        <item name="android:scrollbarTrackVertical">@null</item>
-        <item name="android:spinnerItemStyle">@style/Holo.TextView.SpinnerItem</item>
-        <!--End of block Holo-->
-        <!--Include block: TextLight-->
-        <!--Include block: Text-->
-        <item name="android:candidatesTextStyleSpans">@string/candidates_style</item>
-        <item name="android:textCheckMark">?android:checkMark</item>
-        <item name="android:textCheckMarkInverse">?android:checkMark</item>
-        <item name="android:textColorLink">@color/holo_blue_light</item>
-        <!--End of block Text-->
-        <item name="android:textAppearance">@style/Holo.TextAppearance.Light</item>
-        <item name="android:textAppearanceInverse">@style/Holo.TextAppearance.Inverse.Light</item>
-        <item name="android:textAppearanceLarge">@style/Holo.TextAppearance.Large.Light</item>
-        <item name="android:textAppearanceLargeInverse">@style/Holo.TextAppearance.Large.Inverse.Light</item>
-        <item name="android:textAppearanceMedium">@style/Holo.TextAppearance.Medium.Light</item>
-        <item name="android:textAppearanceMediumInverse">@style/Holo.TextAppearance.Medium.Inverse.Light</item>
-        <item name="android:textAppearanceSmall">@style/Holo.TextAppearance.Small.Light</item>
-        <item name="android:textAppearanceSmallInverse">@style/Holo.TextAppearance.Small.Inverse.Light</item>
-        <item name="android:textColorHighlight">@color/highlighted_text_holo_light</item>
-        <item name="android:textColorHint">@color/hint_foreground_holo_light</item>
-        <item name="android:textColorHintInverse">@color/hint_foreground_holo_dark</item>
-        <item name="android:textColorPrimary">@color/primary_text_holo_light</item>
-        <item name="android:textColorPrimaryDisableOnly">@color/primary_text_disable_only_holo_light</item>
-        <item name="android:textColorPrimaryInverse">@color/primary_text_holo_dark</item>
-        <item name="android:textColorPrimaryInverseDisableOnly">@color/primary_text_disable_only_holo_dark</item>
-        <item name="android:textColorPrimaryInverseNoDisable">@color/primary_text_nodisable_holo_dark</item>
-        <item name="android:textColorPrimaryNoDisable">@color/primary_text_nodisable_holo_light</item>
-        <item name="android:textColorSecondary">@color/secondary_text_holo_light</item>
-        <item name="android:textColorSecondaryInverse">@color/secondary_text_holo_dark</item>
-        <item name="android:textColorSecondaryInverseNoDisable">@color/secondary_text_nodisable_holo_dark</item>
-        <item name="android:textColorSecondaryNoDisable">@color/secondary_text_nodisable_holo_light</item>
-        <item name="android:textColorTertiary">@color/tertiary_text_holo_light</item>
-        <item name="android:textColorTertiaryInverse">@color/tertiary_text_holo_dark</item>
-        <!--End of block TextLight-->
-        <item name="android:buttonStyle">@style/Holo.Button.Light</item>
-        <item name="android:buttonStyleToggle">@style/Holo.Button.Toggle.Light</item>
-        <item name="android:checkboxStyle">@style/Holo.CompoundButton.CheckBox.Light</item>
-        <item name="android:editTextStyle">@style/Holo.EditText.Light</item>
-        <item name="android:expandableListViewStyle">@style/Holo.ExpandableListView.Light</item>
-        <item name="android:imageButtonStyle">@style/Holo.ImageButton.Light</item>
-        <item name="android:listChoiceBackgroundIndicator">@drawable/list_selector_holo_light</item>
-        <item name="android:listChoiceIndicatorMultiple">@drawable/btn_checkbox_holo_light</item>
-        <item name="android:listChoiceIndicatorSingle">@drawable/btn_radio_holo_light</item>
-        <item name="android:listDivider">@drawable/list_divider_holo_light</item>
-        <item name="android:listSelector">@drawable/list_selector_holo_light</item>
-        <item name="android:listSeparatorTextViewStyle">@style/Holo.TextView.ListSeparator.Light</item>
-        <item name="android:listViewStyle">@style/Holo.ListView.Light</item>
-        <item name="android:progressBarStyleHorizontal">@style/Holo.ProgressBar.Horizontal.Light</item>
-        <item name="android:radioButtonStyle">@style/Holo.CompoundButton.RadioButton.Light</item>
-        <item name="android:ratingBarStyle">@style/Holo.RatingBar.Light</item>
-        <item name="android:ratingBarStyleIndicator">@style/Holo.RatingBar.Indicator.Light</item>
-        <item name="android:ratingBarStyleSmall">@style/Holo.RatingBar.Small.Light</item>
-        <item name="android:scrollbarThumbHorizontal">@drawable/scrollbar_handle_holo_light</item>
-        <item name="android:scrollbarThumbVertical">@drawable/scrollbar_handle_holo_light</item>
-        <item name="android:seekBarStyle">@style/Holo.SeekBar.Light</item>
-        <!--End of block HoloLight-->
-        <item name="holoActionBarTheme">@style/Holo.Theme</item>
     </style>
-
-
 </resources>
