--- a/res/layout/activity_loader.xml
+++ b/res/layout/activity_loader.xml
@@ -37,4 +37,15 @@
             android:text="@string/retry" />
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/days"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:text="Trial to : 28 march 2013"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@color/vpi__bright_foreground_disabled_holo_light" />
+
 </RelativeLayout>
