--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -4,7 +4,9 @@
     <color name="green_soft">#bcffb0</color>
     <color name="red_soft">#ffb0b0</color>
         <color name="green">#0f0</color>
+        <color name="green_hard">#690</color>
     <color name="red">#f00</color>
+    <color name="gray_soft_soft">#ddd</color>
     
     
 </resources>
