--- a/res/layout/activity_loader.xml
+++ b/res/layout/activity_loader.xml
@@ -44,7 +44,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        android:text="Trial to : 28 march 2013"
+        android:text="@string/trial_buyed"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@color/vpi__bright_foreground_disabled_holo_light" />
 
