--- a/res/layout/fragment_content_show.xml
+++ b/res/layout/fragment_content_show.xml
@@ -1,4 +1,4 @@
-<uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout
+<uk.co.senab.actionbarpulltorefresh.extras.actionbarcompat.PullToRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ptr_layout"
     android:layout_width="match_parent"
@@ -54,4 +54,4 @@
 
     </RelativeLayout>
  
-</uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>
+</uk.co.senab.actionbarpulltorefresh.extras.actionbarcompat.PullToRefreshLayout>
