--- a/res/layout/menu.xml
+++ b/res/layout/menu.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:divider="@android:color/transparent" />
+        android:divider="@android:color/transparent"
+        android:listSelector="@drawable/holopinklightdarkactionbar_list_selector_holo_light" />
     	
 </LinearLayout>
