--- a/res/values/rb_strings.xml
+++ b/res/values/rb_strings.xml
@@ -144,6 +144,8 @@
     <string name="share_content_horo_for_2">for zodiac sign:</string>
     <string name="share_content_url">https://play.google.com/store/apps/details?id=com.BBsRs.horoscopeFullNew</string>
     <string name="share_send_from">Send from appllication Horoscope 24/7</string>
+    <string name="share_personal_1">horoscope</string>
+    <string name="share_personal_2">for user</string>
     <string name="pre_use">First if all produce infrormation about yourself :)</string>
     <string name="automatic_determined_sign">Automatic determination of the sign is</string>
 
