--- a/res/values/rb_strings.xml
+++ b/res/values/rb_strings.xml
@@ -46,6 +46,43 @@
 
     <string name="copyright_horo_mail_ru">© Леди Mail Ru, эксклюзивный прогноз</string>
     <!-- end of data only for download mail.ru horoscope -->
+    
+    <!-- This data below closed to translate ! Using only for download goroskop.ru horoscope -->
+    <string name="goroskop_ru_title">goroskop.ru</string>
+
+    <string-array name="goroskop_ru_horoscopes">
+        <item>Сегодня</item>
+        <item>Персональный</item>
+        <item>Любовный</item>
+        <item>Неделя</item>
+        <item>Денежный</item>
+        <item>Год</item>
+    </string-array>
+    <string-array name="nameOfzodiacForLoadGoroskopRu">
+        <item>aries</item>
+        <item>taurus</item>
+        <item>gemini</item>
+        <item>cancer</item>
+        <item>leo</item>
+        <item>virgo</item>
+        <item>libra</item>
+        <item>scorpio</item>
+        <item>sagittarius</item>
+        <item>capricorn</item>
+        <item>aquarius</item>
+        <item>pisces</item>
+    </string-array>
+    <string-array name="nameOfHoroscopecForLoadGoroskopRu">
+        <item></item>
+        <item>tomorrow/</item>
+        <item>goroskop_na_nedelyu</item>
+        <item>week</item>
+        <item>month</item>
+        <item>year</item>
+    </string-array>
+
+    <string name="copyright_goroskop_ru">© «ГОРОСКОП.РУ»</string>
+    <!-- end of data only for download goroskop.ru horoscope -->
 
 
     <!-- Data below need to be translate text UI -->
