--- a/res/values/rb_strings.xml
+++ b/res/values/rb_strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- This data below closed to translate ! Using only for download from internet -->
+        <!-- This data below closed to translate ! Using only for download from internet -->
     <string name="user_agent">Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.17 (KHTML, like Gecko) Chrome/24.0.1312.60 Safari/537.17</string>
 
     <integer name="user_timeout">10000</integer>
@@ -46,17 +46,18 @@
 
     <string name="copyright_horo_mail_ru">© Леди Mail Ru, эксклюзивный прогноз</string>
     <!-- end of data only for download mail.ru horoscope -->
-    
+
+
     <!-- This data below closed to translate ! Using only for download goroskop.ru horoscope -->
     <string name="goroskop_ru_title">goroskop.ru</string>
 
     <string-array name="goroskop_ru_horoscopes">
         <item>Сегодня</item>
+        <item>Завтра</item>
         <item>Персональный</item>
         <item>Любовный</item>
         <item>Неделя</item>
         <item>Денежный</item>
-        <item>Год</item>
     </string-array>
     <string-array name="nameOfzodiacForLoadGoroskopRu">
         <item>aries</item>
@@ -74,11 +75,11 @@
     </string-array>
     <string-array name="nameOfHoroscopecForLoadGoroskopRu">
         <item></item>
-        <item>tomorrow/</item>
-        <item>goroskop_na_nedelyu</item>
-        <item>week</item>
-        <item>month</item>
-        <item>year</item>
+        <item>tomorrow</item>
+        <item></item>
+        <item></item>
+        <item></item>
+        <item></item>
     </string-array>
 
     <string name="copyright_goroskop_ru">© «ГОРОСКОП.РУ»</string>
