fully added new provider ENG

--- a/res/values-ru/rb_strings.xml
+++ b/res/values-ru/rb_strings.xml
@@ -31,12 +31,14 @@
         <item>11</item>
     </string-array>
     <string-array name="providers">
-        <item>\@mail.ru</item>
-        <item>goroskop.ru</item>
+        <item>RUS - \@mail.ru</item>
+        <item>RUS - goroskop.ru</item>
+        <item>ENG - horoscope.com</item>
     </string-array>
     <string-array name="providers_entryValues">
         <item>0</item>
         <item>1</item>
+        <item>2</item>
     </string-array>
 
     <string name="application_title">Приложение</string>
