--- a/res/values/rb_strings.xml
+++ b/res/values/rb_strings.xml
@@ -230,6 +230,7 @@
     <string name="share_send_from">Send from appllication Horoscope 24/7</string>
     <string name="share_personal_1">horoscope</string>
     <string name="share_personal_2">for user</string>
+    <string name="share_money_1">Money</string>
     <string name="pre_use">First if all produce infrormation about yourself :)</string>
     <string name="automatic_determined_sign">Automatic determination of the sign is</string>
 
