--- a/res/values-ru/rb_strings.xml
+++ b/res/values-ru/rb_strings.xml
@@ -31,16 +31,12 @@
         <item>11</item>
     </string-array>
     <string-array name="providers">
-        <item>RUS - \@mail.ru</item>
-        <item>RUS - goroskop.ru</item>
-        <item>ENG - horoscope.com</item>
-        <item>ENG - celebrity.yahoo.com</item>
+        <item>\@mail.ru</item>
+        <item>goroskop.ru</item>
     </string-array>
     <string-array name="providers_entryValues">
         <item>0</item>
         <item>1</item>
-        <item>2</item>
-        <item>3</item>
     </string-array>
         <string-array name="locales">
         <item>Русский</item>
