--- a/res/values/rb_strings.xml
+++ b/res/values/rb_strings.xml
@@ -206,14 +206,10 @@
         <item>11</item>
     </string-array>
     <string-array name="providers">
-        <item>RUS - \@mail.ru</item>
-        <item>RUS - goroskop.ru</item>
-        <item>ENG - horoscope.com</item>
-        <item>ENG - celebrity.yahoo.com</item>
+        <item>horoscope.com</item>
+        <item>celebrity.yahoo.com</item>
     </string-array>
     <string-array name="providers_entryValues">
-        <item>0</item>
-        <item>1</item>
         <item>2</item>
         <item>3</item>
     </string-array>
@@ -283,7 +279,7 @@
     <string name="preference_locale_1">Language</string>
     <string name="preference_locale_2">English</string>
     <string name="default_sign">0</string>
-    <string name="default_provider">0</string>
+    <string name="default_provider">2</string>
     <string name="default_locale">en</string>
     <string name="default_name">Horoscopes lover</string>
     <string name="share">Share</string>
