--- a/res/values/rb_dimens.xml
+++ b/res/values/rb_dimens.xml
@@ -2,6 +2,7 @@
 
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="fragment_standart_padding">8dp</dimen>
+    <dimen name="edittext_standart_padding">10dp</dimen>
     <dimen name="slider_menu_custom_padding">8dp</dimen>
 
 </resources>
