--- a/res/layout/activity_inroduce_three.xml
+++ b/res/layout/activity_inroduce_three.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/hexography_green" />
+        android:src="@drawable/hexography_orange" />
 
     <RelativeLayout
         android:id="@+id/relativeLayout1"
@@ -21,10 +21,9 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:text="@string/preference_name_2"
+            android:text="@string/preference_date_2"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/not_simple_white_color" />
-
 
         <TextView
             android:id="@+id/textView1"
@@ -32,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_above="@+id/textView2"
             android:layout_centerHorizontal="true"
-            android:text="@string/preference_name_1"
+            android:text="@string/preference_date_1"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/simple_white_color"
             android:textStyle="bold|italic" />
@@ -73,30 +72,25 @@
             android:layout_marginBottom="3dp"
             android:src="@color/slider_menu_custom_text_color" />
 
-        <TextView
-            android:id="@+id/textMask"
+        <Button
+            android:id="@+id/buttonSetDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/editTextName"
-            android:layout_alignLeft="@+id/editTextName"
-            android:layout_alignRight="@+id/editTextName"
-            android:layout_alignTop="@+id/editTextName"
-            android:background="@drawable/edit_text_holo_light"
-            android:gravity="center_vertical"
-            android:text="@string/default_name"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-        
-               <EditText
-                   android:id="@+id/editTextName"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_below="@+id/textView2"
-                   android:layout_centerHorizontal="true"
-                   android:ems="10"
-                   android:inputType="textCapSentences"
-                   android:textColor="@color/simple_white_color" >
+            android:layout_below="@+id/textView2"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/list_selector_holo_dark"
+            android:padding="@dimen/fragment_standart_padding"
+            android:text="@string/introduce_date"
+            android:textColor="@color/simple_white_color" />
 
-        </EditText>
+        <TextView
+            android:id="@+id/textDateBorn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/buttonSetDate"
+            android:layout_centerHorizontal="true"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@color/not_simple_white_color" />
 
     </RelativeLayout>
 
