--- a/res/xml/about.xml
+++ b/res/xml/about.xml
@@ -10,43 +10,58 @@
 
     <PreferenceCategory android:title="@string/about_base" >
         <Preference
+            android:icon="@drawable/logo_android"
             android:summary="@string/about_base_version_2"
-            android:title="@string/about_base_version_1" android:icon="@drawable/logo_android"/>
+            android:title="@string/about_base_version_1" />
         <Preference
+            android:icon="@drawable/logo_human"
             android:summary="@string/about_base_creator_2"
-            android:title="@string/about_base_creator_1" android:icon="@drawable/logo_human"/>
+            android:title="@string/about_base_creator_1" />
         <Preference
+            android:icon="@drawable/logo_google_play"
             android:summary="@string/about_base_publisher_2"
-            android:title="@string/about_base_publisher_1" android:icon="@drawable/logo_google_play"/>
+            android:title="@string/about_base_publisher_1" />
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/contacts_base" >
         <Preference
+            android:icon="@drawable/logo_vk_com"
             android:key="open_vk"
             android:summary="@string/contacts_vk_2"
-            android:title="@string/contacts_vk_1" android:icon="@drawable/logo_vk_com"/>
+            android:title="@string/contacts_vk_1" />
         <Preference
+            android:icon="@drawable/logo_gmail"
             android:key="open_gmail"
             android:summary="@string/contacts_gmail_2"
-            android:title="@string/contacts_gmail_1" android:icon="@drawable/logo_gmail"/>
+            android:title="@string/contacts_gmail_1" />
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/open_source_base" >
         <Preference
+            android:icon="@drawable/logo_github"
+            android:key="open_github"
             android:summary="@string/open_source_base_2"
-            android:title="@string/open_source_base_1" android:icon="@drawable/logo_github"/>
+            android:title="@string/open_source_base_1" />
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/libraries_base" >
         <Preference
+            android:icon="@drawable/logo_jsoup"
             android:summary="@string/libraries_jsoup_2"
-            android:title="@string/libraries_jsoup_1" android:icon="@drawable/logo_jsoup"/>
+            android:key="open_jsoup"
+            android:title="@string/libraries_jsoup_1" />
         <Preference
+            android:icon="@drawable/logo_holoeverywhere"
             android:summary="@string/libraries_holoeverywhere_2"
-            android:title="@string/libraries_holoeverywhere_1" android:icon="@drawable/logo_holoeverywhere"/>
+            android:key="open_holoeverywhere"
+            android:title="@string/libraries_holoeverywhere_1" />
         <Preference
+            android:icon="@drawable/logo_pulltorefresh"
             android:summary="@string/libraries_pulltorefresh_2"
-            android:title="@string/libraries_pulltorefresh_1" android:icon="@drawable/logo_pulltorefresh"/>
+            android:key="open_pulltorefresh"
+            android:title="@string/libraries_pulltorefresh_1" />
         <Preference
+            android:icon="@drawable/logo_smoothprogressbar"
             android:summary="@string/libraries_smoothprogressbar_2"
-            android:title="@string/libraries_smoothprogressbar_1" android:icon="@drawable/logo_smoothprogressbar"/>
+            android:key="open_smoothprogressbar"
+            android:title="@string/libraries_smoothprogressbar_1" />
     </PreferenceCategory>
 
 </PreferenceScreen>
